--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ rayon = "1.5.1"
 rand = "0.8.4"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.114", features = ["preserve_order"] }
+memory-stats = "1.1.0"
 
 
