--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,7 @@ rand = "0.8.4"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.114", features = ["preserve_order"] }
 memory-stats = "1.1.0"
+rand_distr = "0.4.3"
+ahash = "0.8.11"
 
 
