--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.114", features = ["preserve_order"] }
 memory-stats = "1.1.0"
 rand_distr = "0.4.3"
-ahash = "0.8.11"
+ahash = { version = "0.8.11", feautures = ["nightly"] }
 
 
