--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ serde_json = { version = "1.0.114", features = ["preserve_order"] }
 memory-stats = "1.1.0"
 rand_distr = "0.4.3"
 ahash = { version = "0.8.11", feautures = ["nightly"] }
+atomic = "0.6.0"
 
 
