--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,6 @@ ahash = { version = "0.8.11", feautures = ["nightly"] }
 atomic = "0.6.0"
 itertools = "0.12.1"
 approx = "0.5.1"
+polars = "0.38.1"
 
 
